--- a/readiness-check.html
+++ b/readiness-check.html
@@ -48,6 +48,31 @@
       font-weight: bold;
       cursor: pointer;
     }
+  
+    @media (max-width: 600px) {
+      .container {
+        padding: 20px;
+      }
+      h2 {
+        font-size: 1.4em;
+      }
+      h3 {
+        font-size: 1.1em;
+      }
+      label {
+        font-size: 0.95em;
+      }
+      button {
+        width: 100%;
+        font-size: 1em;
+      }
+      .frage-counter {
+        position: static;
+        text-align: right;
+        margin-bottom: 10px;
+      }
+    }
+
   </style>
 </head>
 <body>
